<resources>
    <string name="app_name">Smart NPK Meter</string>
    <string name="login_pageName">LOGIN</string>
    <string name="login_userName">User Name</string>
    <string name="login_password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="Login_forgot">Forget your password?</string>
    <string name="login_newUser">New User? Sign UP</string>
    <string name="login_changeLan">Change Language</string>
    <string name="username_error">Username cannot be empty</string>
    <string name="sign_up">SIGN UP</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_username">User Name</string>
    <string name="sign_password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_button">SIGN UP</string>
    <string name="connection_check_oops">OOPS!</string>
    <string name="connection_check_no_internet_connection">No Internet Connection</string>
    <string name="connection_check_please_check_your_connection">Please check your connection</string>
    <string name="connection_check_retry">Retry</string>
    <string name="activity_privacy_policy_header_1">Privacy Policy</string>
    <string name="activity_privacy_policy_header_2">Information Collection and Use</string>
    <string name="activity_privacy_policy_header_3">Log Data</string>
    <string name="activity_privacy_policy_header_4">Cookies</string>
    <string name="activity_privacy_policy_header_5">Service Providers</string>
    <string name="activity_privacy_policy_header_6">Security</string>
    <string name="activity_privacy_policy_header_7">Links to Other Sites</string>
    <string name="activity_privacy_policy_header_8">Children’s Privacy</string>
    <string name="activity_privacy_policy_header_9">Changes to This Privacy Policy</string>
    <string name="activity_privacy_policy_header_10">Contact Us</string>
    <string name="activity_privacy_policy_value_1">Team Agro built the Smart NPK Meter app as a free app. This SERVICE is provided by Team Agro at no cost and is intended for use as is.
        This page is used to inform visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service.
        If you choose to use our Service, then you agree to the collection and use of information in relation with this policy. The Personal Information that we collect are used for providing and improving the Service. We will not use or share your information with anyone except as described in this Privacy Policy.
        </string>
    <string name="activity_privacy_policy_value_2">For a better experience while using our Service, We may require you to provide us with certain personally identifiable information, including but not limited to add whatever else we collect here.The information that we request will be retained by us and used as described in this privacy policy.
        The app does use third party services that may collect information used to identify you.</string>
    <string name="activity_privacy_policy_value_3">We want to inform you that whenever you use our Service, in case of an error in the app We collect data and information on your phone called Log Data. This Log Data may include information such as your devices’s Internet Protocol (“IP”) address, device name, operating system version, configuration of the app when utilising our Service, the time and date of your use of the Service, and other statistics.</string>
    <string name="activity_privacy_policy_value_4">Cookies are files with small amount of data that is commonly used an anonymous unique identifier.These are sent to your browser from the website that you visit and are stored on your devices’s internal memory.
        This Services does not uses these “cookies” explicitly. However, the app may use third party code and libraries that use “cookies” to collection information and to improve their services. You have the option to either accept or refuse these cookies, and know when a cookie is being sent to your device. If you choose to refuse our cookies, you may not be able to use some portions of this Service.</string>
    <string name="activity_privacy_policy_value_5">We may employ third-party companies and individuals due to the following reasons:
        To facilitate our Service;To provide the Service on our behalf;To perform Service-related services; or To assist us in analyzing how our Service is used.
We want to inform users of this Service that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information for any other purpose.</string>
    <string name="activity_privacy_policy_value_6">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage is 100% secure and reliable, and we cannot guarantee its absolute security.</string>
    <string name="activity_privacy_policy_value_7">This Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, We strongly advise you to review the Privacy Policy of these websites. We have no control over, and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</string>
    <string name="activity_privacy_policy_value_8">This Services do not address anyone under the age of 12. We do not knowingly collect personal identifiable information from children under 12. In the case I discover that a child under 12 has provided us with personal information, I immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that I will be able to do necessary actions.</string>
    <string name="activity_privacy_policy_value_9">We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately, after they are posted on this page.</string>
    <string name="activity_privacy_policy_value_10">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.</string>
    <string name="instructions_activity_header_1">How to connect the device to Smart NPK Meter mobile app?</string>
    <string name="instructions_activity_header_2">What is meant by NPK? Why it is important?</string>
    <string name="instructions_activity_header_3">How to create the field map?</string>
    <string name="instructions_activity_header_4">How to measure the NPK values in a certain location in the field?</string>
    <string name="instructions_activity_header_5">What will happen to the data measured by the device ?</string>
    <string name="instructions_activity_header_6">How to view the report for the measurements?</string>
    <string name="instructions_activity_header_7">How many locations can I take the measurements ?</string>
    <string name="instructions_activity_header_8">How can I clear the field map and all the measurements ?</string>
    <string name="instructions_activity_header_9">Privacy</string>
    <string name="instructions_activity_header_10">Do you like Our App?</string>
    <string name="instructions_activity_header_11">What can I do if I see something unusual happening in the App?</string>
    <string name="instructions_activity_header_1_child_data">Go to the Device section using the bottom navigation bar. You can click on Connect to Bluetooth to turn on bluetooth and connect to the device.</string>
    <string name="instructions_activity_header_2_child_data">NPK is a short form for three most important nutrients needed for a plant. Which are Nitrogen, Phosphorus and Potassium. To grow any kind of a plant with good fruits we need to fulfill the required amount of NPK levels of that plant.</string>
    <string name="instructions_activity_header_3_child_data">Go to the field where you are need to create the field map.First turn on the location feature of your Android phone.Also you have tot turn on mobile data/wifi.If you are using the Smart NPK Meter for the first time, it will ask you the permissions for use location features.Then , you have to go to the Map section in the bottom navigation bar.At the beginning it will show your current location.To draw a line, you can go to another location and click ADD STOP.Continue this step few times and you will get the field map you need.</string>
    <string name="instructions_activity_header_4_child_data">After connecting the device to Smart NPK Meter via bluetooth, you can click the measure button on MAP section in bottom navigation bar.It will request measurements from Device and device will send back the NPK results.</string>
    <string name="instructions_activity_header_5_child_data">In order to save the field map and NPK measurement data you must click the save button in the MAP section in bottom navigation bar.After clicking the save button data will get persisted the a database.If you don\'t click the save button, data will not get persisted and they will be removed after closing the app.</string>
    <string name="instructions_activity_header_6_child_data">After creating the field map and adding the measurement locations, you can click the REPORT section in the bottom navigation bar in order to view the NPK measurement Report.</string>
    <string name="instructions_activity_header_7_child_data">There is no limit for the no of locations for taking measurements.</string>
    <string name="instructions_activity_header_8_child_data">You can use the clear all button to clean all the data including field map and measurements.</string>
    <string name="instructions_activity_header_9_child_data">100% private. No personal data collection. No data sharing with third parties.</string>
    <string name="instructions_activity_header_10_child_data">Do not forget to rate Smart NPK Meter on PlayStore</string>
    <string name="instructions_activity_header_11_child_data">Be kind to tell the problem to us using the play store review section.</string>
    <string name="navbar_device">DEVICE</string>
    <string name="navbar_report">REPORT</string>
    <string name="navbar_maps">MAP</string>
    <string name="fragment_steps_start_button_text">Connect To Device</string>
    <string name="suggest_walk">Walk through your field and help us to map it</string>
    <string name="start">Start</string>
    <string name="start_instruction">Press the start button when you start walking</string>
    <string name="add_stop">Add Stop</string>
    <string name="save">Save</string>
    <string name="measure">Measure</string>
    <string name="report_instructions">View the report for the NPK measurements of the selected locations</string>
    <string name="location">Location</string>
    <string name="clear_all">Clear All</string>
    <string name="pop_title">Map Updates Saved Successfully</string>
    <string name="Generate">Color Maps</string>
    <string name="title_activity_color_map">ColorMapActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="paired_devices">Paired Devices</string>
</resources>