<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/green_black">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/schedule_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            android:layout_margin="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:orientation="vertical"
                android:padding="10dp"
                android:layout_margin="10dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:contentDescription="content_description_media"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/logo2" />


                <TextView
                    android:id="@+id/hello"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:gravity="center_horizontal"
                    android:text="@string/login_pageName"
                    android:paddingBottom="10sp"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="30sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginUsername"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    app:boxStrokeColor="@color/colorAccent"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/login_userName">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loginPassword"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colorAccent"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/login_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/pass"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <android.widget.Button
                    android:id="@+id/loginBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="50dp"
                    android:background="@drawable/btn_background"
                    android:text="@string/login_button"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:onClick="submitLogin"/>


                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:clickable="true"
                    android:onClick="goReg"
                    android:text="@string/login_newUser"
                    android:textAlignment="center"
                    android:textColor="@drawable/text_click"
                    android:textSize="14dp" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Login_forgot"
                    android:clickable="true"
                    android:visibility="invisible"
                    android:textColor="@drawable/text_click"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/changeLan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_changeLan"
                    android:clickable="true"
                    android:textColor="@drawable/text_click"
                    android:layout_marginTop="5dp"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>
    </ScrollView>

</LinearLayout>