<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background = "@color/light_light_green"
    android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <!-- Media -->
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="150dp"
                            app:srcCompat="@drawable/measureboard"
                            android:scaleType="centerCrop"
                            android:contentDescription="content_description_media"
                            />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:text="@string/report_instructions"
                                android:textAppearance="?attr/textAppearanceBody2"
                                android:textColor="?android:attr/textColorSecondary"
                                />

                        </LinearLayout>



                    </LinearLayout>

                </com.google.android.material.card.MaterialCardView>

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp">

                    <TableRow
                        android:weightSum="12"
                        android:background="@drawable/borderhead">

                        <TextView
                            android:text="@string/location"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:layout_width="0dp"
                            android:gravity="center_horizontal"
                            android:textColor="@color/white"
                            android:background="@drawable/borderhead"
                            android:layout_weight="4"/>

                        <TextView
                            android:text="N"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:layout_width="0dp"
                            android:gravity="center_horizontal"
                            android:textColor="@color/white"
                            android:background="@drawable/borderhead"
                            android:layout_weight="2"/>

                        <TextView
                            android:text="P"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:layout_width="0dp"
                            android:gravity="center_horizontal"
                            android:textColor="@color/white"
                            android:background="@drawable/borderhead"
                            android:layout_weight="2"/>

                        <TextView
                            android:text="K"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:layout_width="0dp"
                            android:gravity="center_horizontal"
                            android:textColor="@color/white"
                            android:background="@drawable/borderhead"
                            android:layout_weight="2"/>
                        <TextView
                            android:text="PH"
                            android:textSize="16dp"
                            android:textStyle="bold"
                            android:padding="10dp"
                            android:layout_width="0dp"
                            android:gravity="center_horizontal"
                            android:textColor="@color/white"
                            android:background="@drawable/borderhead"
                            android:layout_weight="2"/>
                    </TableRow>
                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_view_measured_values"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="false">

                    </androidx.recyclerview.widget.RecyclerView>

                </TableLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/btn_clear_all"
                        android:textColor="@color/white"
                        android:text="@string/clear_all"
                        android:textSize="12dp"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:layout_centerHorizontal="true"
                        android:background="@color/green_black"
                        android:layout_margin="4dp"
                        android:visibility="invisible"
                        />
                </RelativeLayout>

            </LinearLayout>


        </androidx.core.widget.NestedScrollView>


</LinearLayout>